working on footer

--- a/index.html
+++ b/index.html
@@ -33,8 +33,82 @@
         <main></main>
         <footer>
             <div class="flex-footer">
-                <div class="col-l"></div>
-                <div class="col-m"></div>
+
+                <!-- col-left -->
+                <div class="col-l">
+                    <ul>
+                        <li>
+                            <div class="gray">
+                                <i class="font-size fas fa-microphone"></i>
+                                <div>
+                                    mute
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="gray">
+                                <i class="fas fa-angle-up"></i>
+                            </div>
+
+                        </li>
+
+                        <li>
+                            <div class="gray">
+                                <i class="font-size fas fa-video"></i>
+                                <div>
+                                    Stop Video
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="gray">
+                                <i class="fas fa-angle-up"></i>
+                            </div>
+
+                        </li>
+                    </ul>
+                </div>
+                <!-- /col left -->
+
+                <!-- col center -->
+                <div class="col-m">
+                    <ul>
+                        <li>
+                            <div>
+                                <i class="fas fa-user-plus"></i>
+                                <div>
+                                    Invite
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <i class="fas fa-user-friends"></i>
+                                <div>
+                                    Manage Participants
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <i class="fas fa-chart-bar"></i>
+                                <div>
+                                    Polling
+                                </div>
+                            </div>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+
+                    </ul>
+                </div>
+                <!-- col center -->
                 <div class="col-r"></div>
             </div>
 
