header and footer done, working on main

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                         <li>
                             <div class="gray">
-                                <i class="fas fa-angle-up"></i>
+                                <i id="font-small" class="fas fa-angle-up"></i>
                             </div>
 
                         </li>
@@ -64,7 +64,7 @@
 
                         <li>
                             <div class="gray">
-                                <i class="fas fa-angle-up"></i>
+                                <i id="font-small" class="fas fa-angle-up"></i>
                             </div>
 
                         </li>
@@ -74,42 +74,84 @@
 
                 <!-- col center -->
                 <div class="col-m">
-                    <ul>
+                    <ul class="flex">
                         <li>
-                            <div>
-                                <i class="fas fa-user-plus"></i>
+                            <div class="gray">
+                                <i class="font-size fas fa-user-plus"></i>
                                 <div>
                                     Invite
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div>
-                                <i class="fas fa-user-friends"></i>
+                            <div class="gray"> 
+                                <i class="font-size fas fa-user-friends"></i>
                                 <div>
                                     Manage Participants
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div>
-                                <i class="fas fa-chart-bar"></i>
+                            <div class="gray">
+                                <i class="font-size fas fa-chart-bar"></i>
                                 <div>
                                     Polling
                                 </div>
                             </div>
                         </li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-
+                        <li>
+                            <div class="gray">
+                                <i class="c-green font-size fas fa-share-square"></i>
+                                <div>
+                                    Share Screen
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="gray">
+                                <i id="font-small" class="fas fa-angle-up"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="gray">
+                                <i class="font-size fas fa-comment"></i>
+                                <div>
+                                    Chat
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="gray">
+                                <i class="fas fa-record-vinyl"></i>
+                                <div>
+                                    Record
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="gray">
+                                <i class="fab fa-windows"></i>
+                                <div>
+                                    Breakout Rooms
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="gray">
+                                <i class="fas fa-ellipsis-h"></i>
+                                <div>
+                                    More
+                                </div>
+                            </div>          
+                        </li>
                     </ul>
                 </div>
                 <!-- col center -->
-                <div class="col-r"></div>
+                <div class="col-r">
+                    <div>
+                        End meeting
+                    </div>
+                </div>
             </div>
 
         </footer>
