--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 </div>
             </div>
         </header>
-        <main></main>
+
+        <main>
+            
+        </main>
+
         <footer>
             <div class="flex-footer">
 
