--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
         </header>
 
         <main>
+            <div class="p-relative">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                <img src="https://picsum.photos/300/200" alt="">
+                
+
+            </div>
             
         </main>
 
